--- a/Basic Calculator/task/src/main/res/layout/activity_main.xml
+++ b/Basic Calculator/task/src/main/res/layout/activity_main.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent">editText
 
     <EditText
-        android:id="@+id/EditText"
+        android:id="@+id/editText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -16,6 +16,7 @@
         android:ems="10"
         android:hint="0"
         android:inputType="textPersonName"
+        android:text="0"
         android:textAlignment="textEnd"
         android:textSize="60sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,30 +34,28 @@
         android:text="Clear"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/divideButton"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EditText" />
+        app:layout_constraintTop_toBottomOf="@+id/editText" />
 
     <Button
         android:id="@+id/divideButton"
         android:layout_width="@dimen/box_size"
         android:layout_height="@dimen/box_size"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="÷"
         android:textSize="24sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/clearButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_weight="2"
-        app:layout_constraintTop_toBottomOf="@+id/EditText" />
+        app:layout_constraintHorizontal_weight="2" />
 
     <Button
         android:id="@+id/button7"
         android:layout_width="@dimen/box_size"
         android:layout_height="@dimen/box_size"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:text="7"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/button8"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="@+id/clearButton"
         app:layout_constraintTop_toBottomOf="@+id/clearButton" />
@@ -66,7 +65,6 @@
         android:layout_width="@dimen/box_size"
         android:layout_height="@dimen/box_size"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:text="8"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/button9"
@@ -82,7 +80,6 @@
         android:text="9"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/clearButton"
-        app:layout_constraintStart_toEndOf="@+id/button8"
         app:layout_constraintTop_toBottomOf="@+id/clearButton" />
 
     <Button
@@ -107,8 +104,8 @@
         android:text="4"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/button5"
-        app:layout_constraintStart_toStartOf="@+id/button7"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toStartOf="@+id/button7"
 
         app:layout_constraintTop_toBottomOf="@+id/button7" />
 
@@ -215,6 +212,7 @@
         android:layout_width="@dimen/box_size"
         android:layout_height="@dimen/box_size"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:text="."
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/equalButton"
