--- a/Basic Calculator/task/src/main/res/layout/activity_main.xml
+++ b/Basic Calculator/task/src/main/res/layout/activity_main.xml
@@ -199,11 +199,9 @@
         android:layout_height="@dimen/box_height"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:text="0"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/dotButton"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toEndOf="@+id/button2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button1" />
 
